Fixed the background not covering the entire page when adding a new row of books.

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .bookForm {
     display: none;
     position: fixed;
-    top: 25%;
+    top: 20%;
     left: 50%;
 
     padding: 1rem;
@@ -60,8 +60,7 @@ header>p {
     grid-row: 2 / -1;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 0.2fr));
-    grid-auto-rows: 550px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 25px;
     padding: 25px;
     background-color: #bae8e8;
